include(FetchContent)

FetchContent_Declare(
    googletest
    GIT_REPOSITORY https://github.com/google/googletest.git
    GIT_TAG release-1.12.1
)

# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

set(SOURCES
    ParserArgumentsTests.cpp
)

add_executable(ParserArgumentsTests ${SOURCES})

target_link_libraries(
    ParserArgumentsTests
    ParserArgumentsLibray
    GTest::gtest_main
)


target_include_directories(ParserArgumentsTests PRIVATE "${PROJECT_SOURCE_DIR}/include")

include(GoogleTest)

gtest_discover_tests(ParserArgumentsTests)